--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,10 +14,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav mx-auto">
                 <li class="navbar-item">
-                    <a class="navbar-brand" href="#">Inicio</a>
+                    <a class="navbar-brand" href="/">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/about/">Research</a>
+                    <a class="nav-link active" href="/research/">Research</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Books</a>
