--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="/files/css/main.css">
     <link rel="stylesheet" href="/files/css/timeline.css">
     <link rel="stylesheet" href="/files/css/bio.css">
+    <link rel="stylesheet" href="/files/css/research.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
         integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
     <link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml"
