Books and software pages added

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
+<nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top py-3">
     <div class="container-fluid">
 
         <!-- Brand -->
@@ -14,16 +14,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav mx-auto">
                 <li class="navbar-item">
-                    <a class="navbar-brand" href="/">Inicio</a>
+                    <a class="navbar-brand" href="/"><i class="fas fa-home"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/research/">Research</a>
+                    <a class="nav-link" href="/research/">Investigación</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Books</a>
+                    <a class="nav-link" href="/books/">Novelas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Software</a>
+                    <a class="nav-link" href="/software/">Software</a>
                 </li>
             </ul>
         </div>
