--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,23 +5,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Your awesome title | Write an awesome description for your new site here. You can edit this line in
-        _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site
-        description.</title>
+    <title>David S. Hidalgo</title>
     <meta name="generator" content="Jekyll v4.4.1" />
-    <meta property="og:title" content="Your awesome title" />
+    <meta property="og:title" content="David S. Hidalgo" />
     <meta property="og:locale" content="en_US" />
-    <meta name="description"
-        content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
-    <meta property="og:description"
-        content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
+    <meta name="description" content="" />
+    <meta property="og:description" content="" />
     <link rel="canonical" href="http://localhost:4000/" />
     <meta property="og:url" content="http://localhost:4000/" />
-    <meta property="og:site_name" content="Your awesome title" />
+    <meta property="og:site_name" content="David S. Hidalgo" />
     <meta property="og:type" content="website" />
-    <meta property="twitter:title" content="Your awesome title" />
     <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"Your awesome title","name":"Your awesome title","url":"http://localhost:4000/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"","headline":"David S. Hidalgo","name":"David S. Hidalgo","url":"http://localhost:4000/"}</script>
     <!-- End Jekyll SEO tag -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -29,10 +24,11 @@
     <link rel="stylesheet" href="/files/css/timeline.css">
     <link rel="stylesheet" href="/files/css/bio.css">
     <link rel="stylesheet" href="/files/css/research.css">
+    <link rel="stylesheet" href="/files/css/software.css">
+    <link rel="stylesheet" href="/files/css/books.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
         integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
-    <link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml"
-        title="Your awesome title" />
+    <link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="David S. Hidalgo" />
 </head>
 
 <body>
