--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,13 +17,13 @@
                     <a class="navbar-brand" href="/"><i class="fas fa-home"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href='/research/' | relative_url">Investigación</a>
+                    <a class="nav-link" href="{{ '/research/' | relative_url }}">Investigación</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href='/books/' | relative_url">Novelas</a>
+                    <a class="nav-link" href="{{ '/books/' | relative_url }}">Novelas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href='/software' | relative_url">Software</a>
+                    <a class="nav-link" href="{{ '/software' | relative_url }}">Software</a>
                 </li>
             </ul>
         </div>
