--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
                     <a class="navbar-brand" href="/"><i class="fas fa-home"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ '/research/' | relative_url }}">Investigación</a>
+                    <a class="nav-link" href="/research.html">Investigación</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ '/books/' | relative_url }}">Novelas</a>
