--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,10 +20,10 @@
                     <a class="nav-link" href="/research.html">Investigación</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ '/books/' | relative_url }}">Novelas</a>
+                    <a class="nav-link" href="/books.html">Novelas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ '/software' | relative_url }}">Software</a>
+                    <a class="nav-link" href="/software.html">Software</a>
                 </li>
             </ul>
         </div>
