--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav mx-auto">
                 <li class="navbar-item">
-                    <a class="navbar-brand" href="/"><i class="fas fa-home"></i></a>
+                    <a class="nav-link" href="/">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/research.html">Investigación</a>
